# tt-warp

./: .gitignore  README.md  TENSTORRENT.md  WARP.md  pyproject.toml
shell/: tt-warprc
skills/: tt-connect-ui.md  tt-crash-diagnoser.md  tt-env-selector.md  tt-generate.md  tt-hardware-primer.md  tt-serve-llm.md  tt-setup.md  ttlang-workflow.md
tests/: conftest.py  test_cpu_sidecar.py  test_diag.py  test_dispatch.py  test_envs.py  test_hardware.py  test_llm.py
tests/knowledge/: test_db.py  test_sync.py
tt_mcp/: cpu_sidecar.py  diag.py  dispatch.py  envs.py  hardware.py  llm.py  server.py
tt_mcp/knowledge/: db.py  sync.py
tt_warp/: cli.py
